<resources>
    <string name="app_name">OFF Bank</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="conectar">Conectar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="registername">Nome completo</string>
    <string name="registerCpf">CPF\n</string>
    <string name="registerAge">Idade</string>
    <string name="registerEmail">Email</string>
    <string name="registerTelephone">Telefone</string>
    <string name="register_button_next">Próximo</string>
    <string name="return_Screen">Retornar</string>
    <string name="cep">Digite o cep</string>
    <string name="cep_search">Buscar</string>
    <string name="register_cep_road">Rua</string>
    <string name="register_cep_neighborhood">Bairro</string>
    <string name="register_cep_locality">Localidade</string>
    <string name="register_cep_state">Estado</string>
    <string name="register_cep_houseNumber">Número do ap</string>
    <string name="register_cep_house_letter">Letra</string>
    <string name="login_user">Nome do usuário</string>
    <string name="login_password">Senha</string>
    <string name="login_repeat_password">Repita a senha</string>
    <string name="face_frame_description">Foto do rosto</string>
    <string name="register_photo_next">Próximo</string>
    <string name="register_photo_capture">Capturar foto novamente</string>
    <string name="photo_preview">descrição</string>
    <string name="termo_titulo">Termos de Uso do Aplicativo Off Banco</string>
    <string name="termo_description">Bem-vindo ao aplicativo Off Banco. Ao utilizar este aplicativo, você concorda com os Termos de Uso descritos abaixo. Caso não concorde, pedimos que não utilize o aplicativo.\n1. Natureza do Aplicativo\nO Off Banco é um aplicativo de teste desenvolvido exclusivamente com fins educacionais e de estudo. Ele não é uma solução bancária oficial e não realiza operações financeiras reais, como movimentações bancárias, transferências, pagamentos ou qualquer outro tipo de transação monetária.\n\n2. Isenção de Responsabilidade\n2.1. Uso Experimental:\nO aplicativo destina-se apenas à experimentação e aprendizado. Qualquer dado inserido no aplicativo será tratado como parte de um ambiente simulado, sem garantia de funcionamento em um ambiente real.\n\n2.2. Sem Garantias:\nO desenvolvedor do aplicativo não garante a precisão, funcionalidade ou disponibilidade do serviço, tampouco se responsabiliza por quaisquer danos diretos, indiretos ou incidentais decorrentes do uso do aplicativo.\n\n3. Privacidade e Dados\n3.1. Coleta de Dados:\nOs dados inseridos no aplicativo podem ser armazenados apenas localmente ou em ambientes de teste, dependendo da configuração. Nenhum dado será compartilhado ou utilizado para finalidades comerciais.\n\n3.2. Exclusão de Dados:\nComo o aplicativo é voltado para testes, os dados podem ser removidos a qualquer momento sem aviso prévio.\n\n4. Restrições de Uso\n4.1. Você não deve utilizar o aplicativo com a intenção de realizar transações reais ou compartilhar informações confidenciais ou sensíveis.\n4.2. Qualquer tentativa de uso para finalidades fora do escopo educacional será considerada inadequada e de inteira responsabilidade do usuário.\n\n5. Modificações e Atualizações\nO aplicativo está em constante desenvolvimento. Funcionalidades podem ser alteradas, removidas ou adicionadas a qualquer momento sem aviso prévio.\n\n6. Propriedade Intelectual\nTodo o código, design e conteúdo do aplicativo são de propriedade do desenvolvedor e estão protegidos por leis de propriedade intelectual.\n\n7. Disposições Gerais\n7.1. Estes Termos de Uso podem ser atualizados periodicamente.\n7.2. O uso contínuo do aplicativo após atualizações dos termos implica na aceitação dos novos termos.\n\nSe você tiver dúvidas ou preocupações, entre em contato através do e-mail: eduardofreitasfr@gmail.com.\n\nÚltima atualização: 22 de novembro de 2024.\n\n</string>
    <string name="accept_terms">Aceite os Termos de Uso antes de continuar utilizando o aplicativo.</string>
    <string name="completeRegistration">Registrar</string>
    <string name="cancelar">Cancelar registro</string>
    <string name="homemoneyaccount">Dinheiro na conta</string>
    <string name="home_money">R$ 0</string>
    <string name="home_pix">PIX</string>
    <string name="home_tf">Transferencia</string>
    <string name="home_shop">shopping</string>
    <string name="home_cards">Cartão de credito</string>
    <string name="card_value">R$ 0</string>
    <string name="card_live">Limite livre</string>
    <string name="card_count">Total de limite</string>
    <string name="home_wellcome">Bem vindo(a)  Eduardo Freitas</string>
    <string name="home_loan">Emprestimo</string>
    <string name="home_loan_description">Gerencie seus empréstimos de forma prática! Nosso aplicativo permite registrar, acompanhar prazos e valores, garantindo total controle e organização financeira.</string>
    <string name="home_lean_button">Solicitar emprestimo</string>
</resources>