<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    tools:context=".activity.register.RegisterAddress">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_cep"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/cep" />

        <Button
            android:id="@+id/register_cep_search"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@color/cardview_dark_background"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/cep_search" />
    </LinearLayout>

    <TextView
        android:id="@+id/register_cep_road"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/register_cep_road"
        android:inputType="text" />

    <TextView
        android:id="@+id/register_cep_neighborhood"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/register_cep_neighborhood"
        android:inputType="text" />

    <TextView
        android:id="@+id/register_cep_locality"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/register_cep_locality"
        android:inputType="text" />

    <TextView
        android:id="@+id/register_cep_state"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/register_cep_state"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_cep_houseNumber"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/register_cep_houseNumber"
            android:inputType="number" />

        <EditText
            android:id="@+id/register_cep_house_letter"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/register_cep_house_letter"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/register_next_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/register_button_next" />

    <Button
        android:id="@+id/returnScreenCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/return_Screen" />

</LinearLayout>