<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_termo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/termo_titulo"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_termo_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/termo_description" />
    </ScrollView>

    <CheckBox
        android:id="@+id/text_confirm_termo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_terms"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/button_register"
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/completeRegistration" />
    <Button
        android:id="@+id/button_register_exit"
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancelar" />
</LinearLayout>