<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_wellcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/home_wellcome"
                android:textSize="22dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:alpha="0.70"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/homemoneyaccount"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/home_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_money"
                    android:textSize="40dp" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.75"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/home_pix"
                        android:layout_width="65dp"
                        android:layout_height="70dp"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/home_pix"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/home_tef"
                        android:layout_width="65dp"
                        android:layout_height="70dp"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/home_tf"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/home_cards"
                        android:layout_width="65dp"
                        android:layout_height="70dp"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/home_cards"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/home_shopping"
                        android:layout_width="65dp"
                        android:layout_height="70dp"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/home_shop"
                        android:textSize="10dp" />
                </LinearLayout>
            </HorizontalScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.80"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_cards"
                    android:textSize="26dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="@string/card_live"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/coinsLive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/card_value"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/card_live"
                    android:textSize="30dp" />


                <TextView
                    android:id="@+id/creditcardlimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/card_value"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:alpha="0.75"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/home_loan"
                    android:textSize="26dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:text="@string/home_loan_description"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/home_lean_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_lean_button" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
