<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.register.RegisterPhoto"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="650dp">
        <ImageView
            android:id="@+id/photoPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/photo_preview" />
        <androidx.camera.view.PreviewView
            android:id="@+id/previewPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <!-- Moldura para o rosto -->
        <ImageView
            android:id="@+id/frameOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/face"
            android:layout_gravity="center"
            android:contentDescription="@string/face_frame_description"
            android:scaleType="fitCenter" />
        <Button
            android:id="@+id/register_photo_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_photo_capture"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="3dp" />
    </FrameLayout>



    <Button
        android:id="@+id/register_photo_next"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="30dp"
        android:text="@string/register_photo_next" />

</LinearLayout>